--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.config.import=file:env.properties
 server.port=8080
+#Errors:
+server.error.include-message=never
+server.error.include-stacktrace=never
 
 # DataSource:
 spring.datasource.url= jdbc:postgresql://db.txtpzxpruvhdjiruiolo.supabase.co:${DB_PORT}/${DB_NAME}
